--- a/client/src/common/scss/element.scss
+++ b/client/src/common/scss/element.scss
@@ -1,7 +1,5 @@
-$--color-primary: #6477F2 !default;
+$--color-primary: #6477f2 !default;
 
-$--font-path: '~element-ui/lib/theme-chalk/fonts';
+$--font-path: "~element-ui/lib/theme-chalk/fonts";
 
 @import "~element-ui/packages/theme-chalk/src/index";
-
-
