--- a/client/src/common/scss/base.scss
+++ b/client/src/common/scss/base.scss
@@ -1,18 +1,16 @@
-
 @import "./reset";
 
-$mainColor: #6477F2;
+$mainColor: #6477f2;
 $mainTitleColor: #354052;
-$subTitleColor: #9B9B9B;
-$originOne: #FFA042;
+$subTitleColor: #9b9b9b;
+$originOne: #ffa042;
 
 $paleGrey: rgb(244, 245, 247);
 $paleGreyTwo: rgb(253, 253, 253);
 $black: rgb(41, 44, 64);
 
-$warmRed: #F66161;
+$warmRed: #f66161;
 $warmgrey: rgb(163, 166, 178);
-
 
 body {
   background: $paleGrey;
@@ -55,7 +53,7 @@ body {
   color: $mainColor;
   height: 48px;
   border-radius: 24px;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 // el-button圆角高度36，宽度96
@@ -80,7 +78,7 @@ body {
 }
 
 @mixin border($position: top, $color: rgb(233, 236, 240)) {
-  content: '';
+  content: "";
   position: absolute;
   color: $color;
   //transform-origin: 0 0;
